--- a/exercicios/ex026/mq004/estilos/mediaquery.css
+++ b/exercicios/ex026/mq004/estilos/mediaquery.css
@@ -3,5 +3,80 @@
 /* Versão todas as midias */
 
 @media print {
+    * {
+        font-family: 'Times New Roman', Times, serif;
+
+    }
+
+    main {
+        background-color: rgba(255, 255, 255, 0.8); 
+        width: 700px;
+        margin: 20px auto;
+        border-radius: 10px;
+        padding: 20px;
+        border: 2px solid black;
+    }
     
+    h1 {
+        text-align: center;
+        color: black;
+        text-shadow: none;
+    }
+
+    p::after {content:'Site criado por mim'}
+
+    img#phone { display: none; }
+    img#tablet { display: none; }
+    img#print { display: block; }
+    img#pc { display: none; }
+    img#tv { display: none; }
+
+}
+
+/* Telas pequenas (telefones, 600px e menor) */
+@media only screen and (max-width: 600px) {}
+
+/* Dispositivos pequenos (tablets verticais e telefones grandes, 600px e maior) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Dispositivos pequenos (tablets horizontais, 768px e maior) */
+@media only screen and (min-width: 768px) {
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+        
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: block; }
+    img#print { display: none; }
+    img#pc { display: none; }
+    img#tv { display: none; }
+}
+
+/* Dispositivos grandes (notebooks/computadores, 992px e maior) */
+@media only screen and (min-width: 992px) {
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none; }
+    img#print { display: none; }
+    img#pc { display: block; }
+    img#tv { display: none; }
+}
+
+/* Dispositivos muito grander (notebook grandes e computadores, 1200px e maior) */
+@media only screen and (min-width: 1200px) {
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none; }
+    img#print { display: none; }
+    img#pc { display: none; }
+    img#tv { display: block; }
 }
