--- a/exercicios/ex026/mq005/estilo/style.css
+++ b/exercicios/ex026/mq005/estilo/style.css
@@ -20,7 +20,7 @@ header > h1 {
 }
 
 main {
-    width: 90vw;
+    width: 100%;
     background-color: white;
     margin: 20px auto;
     padding: 10px;
@@ -42,11 +42,11 @@ article > p {
 
 span#icon {
     background-color: rgb(90, 90, 90);
-    width: 100vw;
+    width: 100%;
     display: block;
     text-align: center;
     color: white;
-    padding: 10px;
+    padding: 10px 0px;
     cursor: pointer;
 }
 
